# speedex

./: .clang-format  .gitignore  .gitmodules  AUTHORS  AWS_install_instructions.md  Doxyfile  Makefile.am  NOTES  README.md  autogen.sh  configure.ac  cryptocoin_experiment_formatter.py  default_synthetic_data.sh  disable_hyperthreading.sh  gen_inv.py  payment_synthetic_data.sh  setup.py
ansible/: actions.yaml  autogen_configure.yaml  autogen_configure_logging.yaml  aws_init.yaml  aws_install_packages.yaml  blockstm_comparison.yaml  cda_experiment.yaml  clean_lmdbs.yaml  configure_for_blockstm_experiment.yaml  cryptocoin_data_gen.yaml  get_node.yaml  git_clone.yaml  git_pull.yaml  git_submodule_clone.yaml  make_all.yaml  pull_remake.yaml  set_check_sigs.yaml  set_config.yaml  set_config_aws.yaml  set_experiment_options.yaml  set_no_check_sigs.yaml  set_num_threads.yaml  synthetic_data_gen.yaml
automation/: command_line_args.h  experiment_control.cc  experiment_control.h  geni-get3  get_experiment_vars.h  get_node.sh  get_replica_id.h
block_processing/: block_producer.cc  block_producer.h  block_validator.cc  block_validator.h  operation_metadata.h  serial_transaction_processor.cc  serial_transaction_processor.h
cda/: serial_ob.cc  serial_ob.h  serial_ob_experiment.cc  serial_ob_experiment.h
coingecko_snapshot/: AVAX-usd-max.csv  ada-usd-max.csv  algo-usd-max.csv  atom-usd-max.csv  axs-usd-max.csv  bat-usd-max.csv  bch-usd-max.csv  bnb-usd-max.csv  bsv-usd-max.csv  btc-usd-max.csv  btt-usd-max.csv  busd-usd-max.csv  chz-usd-max.csv  cro-usd-max.csv  crv-usd-max.csv  dai-usd-max.csv  dash-usd-max.csv  doge-usd-max.csv  dot-usd-max.csv  enj-usd-max.csv  eos-usd-max.csv  etc-usd-max.csv  eth-usd-max.csv  fil-usd-max.csv  ftm-usd-max.csv  gala-usd-max.csv  hot-usd-max.csv  icp-usd-max.csv  link-usd-max.csv  lrc-usd-max.csv  luna-usd-max.csv  mana-usd-max.csv  matic-usd-max.csv  mim-usd-max.csv  near-usd-max.csv  okb-usd-max.csv  sand-usd-max.csv  shib-usd-max.csv  sol-usd-max.csv  theta-usd-max.csv  (+10 more)
config/: config_2.yaml  config_geoff_aws.yaml  config_local.yaml  replica_config.cc  replica_config.h
crypto/: crypto_utils.cc  crypto_utils.h
experiment_config/: blocksize_10000.yaml  blocksize_100000.yaml  blocksize_1000000.yaml  blocksize_20000.yaml  blocksize_200000.yaml  blocksize_2000000.yaml  blocksize_5000.yaml  blocksize_50000.yaml  blocksize_5000000.yaml  blockstm_params.yaml  cryptocoin_experiment_params.yaml  default_params_10.yaml  default_params_20.yaml  default_params_50.yaml
experiments/: producer_node.cc  producer_node.h  singlenode_init.cc  singlenode_init.h  tatonnement_sim_experiment.cc  tatonnement_sim_experiment.h  tatonnement_sim_setup.h  validator_node.cc  validator_node.h
filtering/: account_filter_entry.cc  account_filter_entry.h  error_code.h  filter_log.cc  filter_log.h
generic/: counting_vm.cc  counting_vm.h
header_hash/: block_header_hash_map.cc  block_header_hash_map.h
hotstuff/: README.md  block.cc  block.h  consensus.cc  consensus.h  crypto.cc  crypto.h  event.cc  event.h  event_queue.cc  event_queue.h  generic_event_queue.h  hotstuff.cc  hotstuff.h  hotstuff_debug_macros.h  hotstuff_protocol_client.cc  liveness.h  lmdb.cc  lmdb.h  network_event.cc  network_event.h  network_event_queue.cc  network_event_queue.h  nonblocking_rpc_client.h  replica_config.cc  replica_config.h
lmdb/: lmdb_loading.h  lmdb_types.cc  lmdb_types.h  lmdb_wrapper.cc  lmdb_wrapper.h
main/: aberrant_datasets_gen.cc  blockstm_comparison.cc  blockstm_vm_hotstuff.cc  cda_experiment.cc  clean_lmdbs.cc  counting_vm_hotstuff.cc  cryptocoin_dataset_gen.cc  exchange_data_experiment.cc  experiment_controller.cc  filtering_experiment.cc  filtering_experiment_gen.cc  overlay_sim.cc  replicated_simulation_experiment_controller.cc  simple.cc  solver_comparison.cc  speedex_producer_experiment.cc  speedex_validator_experiment.cc  speedex_vm_hotstuff.cc  synthetic_data_gen_from_params.cc  tatonnement_experiment_data_gen_from_params.cc  tatonnement_mega_graph.cc  test.cc  trie_comparison.cc
memory_database/: account_lmdb.cc  account_lmdb.h  account_vector.cc  account_vector.h  background_thunk_clearer.h  memory_database.cc  memory_database.h  memory_database_auxiliary.h  memory_database_view.cc  memory_database_view.h  revertable_asset.h  sequence_tracker.cc  sequence_tracker.h  thunk.cc  thunk.h  transfer_logs.h  typedefs.h  user_account.cc  user_account.h
mempool/: mempool.cc  mempool.h  mempool_cleaner.cc  mempool_cleaner.h  mempool_structures.h  mempool_transaction_filter.cc  mempool_transaction_filter.h
modlog/: account_modification_entry.cc  account_modification_entry.h  account_modification_log.cc  account_modification_log.h  file_prealloc_worker.cc  file_prealloc_worker.h  log_entry_fns.cc  log_entry_fns.h  log_merge_worker.cc  log_merge_worker.h  typedefs.h
notes/: mip-formulation.txt
orderbook/: commitment_checker.cc  commitment_checker.h  helpers.h  lmdb.cc  lmdb.h  metadata.h  offer_clearing_logic.h  offer_clearing_params.cc  offer_clearing_params.h  orderbook.cc  orderbook.h  orderbook_manager.cc  orderbook_manager.h  orderbook_manager_view.cc  orderbook_manager_view.h  thunk.h  typedefs.h  utils.h
overlay/: overlay_client.cc  overlay_client.h  overlay_client_manager.cc  overlay_client_manager.h  overlay_flooder.cc  overlay_flooder.h  overlay_server.cc  overlay_server.h
price_computation/: demand_oracle.h  lp_solver.cc  lp_solver.h  normalization_rolling_average.cc  normalization_rolling_average.h  tatonnement_oracle.cc  tatonnement_oracle.h
rpc/: block_forwarder.cc  block_forwarder.h  consensus_api.cc  consensus_api.h  consensus_api_server.cc  consensus_api_server.h  rpcconfig.h
simplex/: allocator.cc  allocator.h  bitcompressed_row.cc  bitcompressed_row.h  lp.md  objective_row.h  simplex.cc  simplex.h  solver.cc  solver.h  sparse.cc  sparse.h
speedex/: approximation_parameters.h  autorollback_validation_structures.cc  autorollback_validation_structures.h  reload_from_hotstuff.cc  reload_from_hotstuff.h  speedex_management_structures.cc  (+18 more)
(+130 files in other folders)
